# srs

./: .gitignore
src/erp42_slam/: package.xml  setup.cfg  setup.py
src/erp42_slam/config/: ekf.yaml  global_ekf.yaml  local_ekf.yaml
src/erp42_slam/erp42_slam/: imu_node.py  lidar_sensor_node.py
src/erp42_slam/launch/: erp42_full_slam.launch.py  erp42_localization_slam.launch.py
src/erp42_slam/urdf/: robot.urdf.xacro
